--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/Common/Resources/HotmartMessages.resx
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/Common/Resources/HotmartMessages.resx
@@ -152,4 +152,10 @@
 	<data name="EXC0002" xml:space="preserve">
     <value>EXC0002 - Evento com Identifier {0} já existe para essa Company.</value>
   </data>
+	<data name="EXC0003" xml:space="preserve">
+    <value>EXC0003 - O campo {0} é obrigatório.</value>
+  </data>
+	<data name="EXC0004" xml:space="preserve">
+    <value>EXC0004 - O campo {0} deve ser maior que zero.</value>
+  </data>
 </root>
